--- a/manifest.json
+++ b/manifest.json
@@ -72,7 +72,7 @@
 	"h5": {
 		"title": "course-selection",
 		"router": {
-			"mode": "history",
+			"mode": "hash",
 			"base": "/course-selection/"
 		}
 	}
