--- a/manifest.json
+++ b/manifest.json
@@ -71,9 +71,11 @@
 	"vueVersion": "3",
 	"h5": {
 		"title": "course-selection",
+		"template": "count.html",
 		"router": {
 			"mode": "hash",
 			"base": "/course-selection/"
-		}
+		},
+		"template": "count.html"
 	}
 }
