--- a/manifest.json
+++ b/manifest.json
@@ -50,7 +50,7 @@
 	"quickapp": {},
 	/* 小程序特有相关 */
 	"mp-weixin": {
-		"appid": "",
+		"appid": "wx788d386f8c410343",
 		"setting": {
 			"urlCheck": false
 		},
@@ -70,11 +70,14 @@
 	},
 	"vueVersion": "3",
 	"h5": {
-		"title": "course-selection",
+		"title": "",
 		"template": "",
 		"router": {
 			"mode": "hash",
-			"base": ""
+			"base": "/front/"
+		},
+		"devServer": {
+			"https": false
 		}
 	}
 }
